--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ks-infra/element-plus": "^0.4.29",
+    "@unplugin-vue-ce/sub-style": "^1.0.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
