--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ks-infra/element-plus": "^0.4.29",
     "@unplugin-vue-ce/sub-style": "^1.0.0",
+    "@vue/shared": "^3.5.12",
     "vue": "^3.5.12"
   },
   "devDependencies": {
