--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "vue-shadow-dom-demo",
-  "version": "0.0.0",
-  "private": true,
+  "name": "vue-create-shadow-app",
+  "version": "0.1.0",
   "type": "module",
+  "module": "dist/create-shadow-app.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "run-p type-check build-types \"build-only {@}\" --",
+    "build-types": "vue-tsc --emitDeclarationOnly -p tsconfig.lib.json --composite false --declaration true --noEmit false",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
@@ -13,19 +15,19 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@ks-infra/element-plus": "^0.4.29",
-    "@unplugin-vue-ce/sub-style": "^1.0.0",
-    "@vue/shared": "^3.5.12",
+    "@vue/shared": "^3.5.12"
+  },
+  "peerDependencies": {
     "vue": "^3.5.12"
   },
   "devDependencies": {
-    "@popperjs/core": "^2.11.8",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.17.6",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
+    "element-plus": "^2.8.8",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
