--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "type": "module",
   "module": "dist/create-shadow-app.js",
   "types": "types/index.d.ts",
+  "files": [
+    "dist",
+    "types"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-types \"build-only {@}\" --",
@@ -12,7 +16,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "@vue/shared": "^3.5.12"
