--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dist",
     "types"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/depressedX/vue-create-shadow-app"
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-types \"build-only {@}\" --",
